# aister

./: .gitignore  Cargo.toml
demo/: package-lock.json  package.json
demo/public/: index.html
demo/src/: .env.example  App.vue  router.ts  shims-vue.d.ts
demo/src/comps/: Header.vue  MessageCard.vue
demo/src/views/: Chat.vue  Home.vue  Translate.vue
easyml/: Cargo.toml
easyml/src/: lib.rs
easyml/src/translate/: mod.rs
src/: chat.rs  main.rs  translate.rs
