[package]
name = "aister"
version = "0.1.0"
authors = ["Carter Snook <cartersnook04@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix = "0.10"
actix-codec = "0.3"
actix-web-actors = "3"
actix-files = "0.3"
futures = "0.3.1"
bytes = "0.5.3"
rust-bert = "0.13.0"


# Fixes `h2` compilation error from outdated code.
indexmap = { version = "1.5.2", features = ["std"] }
