[package]
name = "easyml"
version = "0.1.0"
authors = ["Carter Snook <cartersnook04@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-bert = "0.13.0"

[features]
default = ["translate"]
translate = []
